objects/LLC_BI__Product_Package_Parent_Loan_History__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Child_Highest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Highest</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Child Highest</relationshipLabel>
        <relationshipName>Child_Highest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Child_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Product Package Loans History</relationshipLabel>
        <relationshipName>Product_Package_Loans_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Booked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Child Is Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parent_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Product Package Loans History (Parent Loan)</relationshipLabel>
        <relationshipName>Product_Package_Loans_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Product Package Loans History</relationshipLabel>
        <relationshipName>Product_Package_Loans_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Package Loan History</label>
    <nameField>
        <label>Product Package Parent Loan History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Package Loans History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>